Update resume with new experiences and skills

--- a/resume.tex
+++ b/resume.tex
@@ -97,7 +97,7 @@
 %----------HEADING------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
    \textbf{\Large Venu Dattathreya Vemuru} & Email: {venudattathreya@gmail.com}\\
-   \href{https://www.linkedin.com/in/venu-dattathreya-vemuru-a5020b225}{LinkedIn} \hspace{1em} \href{https://github.com/venu284}{GitHub} & Mobile: +1-(706)-380-2548 \\
+   \href{https://www.linkedin.com/in/venu-dattathreya-vemuru-a5020b225}{LinkedIn} \hspace{1em} \href{https://github.com/venu284}{GitHub} & Mobile: {+1-(706)-380-2548} \\
 \end{tabular*}
 
 
@@ -106,9 +106,9 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {University of Georgia}{Athens, GA}
-      {Master of Science in Computer Science; GPA: 3.7}{Aug 2024 - Dec 2026(Expected)}
+      {Master of Science in Computer Science; GPA: 3.7}{Aug 2024 - May 2026(Expected)}
       \resumeItemListStart
-        \resumeItem{Relevant Coursework: Advanced Algorithm Optimization, Software Engineering, Database, Machine Learning}
+        \resumeItem{Relevant Coursework: Algorithm Optimization, Data Structures and Algorithms, Machine Learning, Database}
       \resumeItemListEnd
    \resumeSubheading
      {RMK Engineering College}{Chennai, India}
@@ -122,67 +122,58 @@
 \section{Experience}
 \resumeSubHeadingListStart
 
-\resumeSubheading
-  {Full Stack Developer (Graduate Student Assistant)}{May 2025 - Present} 
+  \resumeSubheading
+  {Full Stack Developer}{May 2025 - Present}
   {University of Georgia - SER-CAT Lab}{Athens, GA}
   \resumeItemListStart
-    \resumeItem{Developing full-stack web application using Drupal 10 CMS, PHP, JavaScript, MySQL on Acquia Cloud Platform, migrating 10,000+ scientific records with Superfish jQuery navigation system}
-    \resumeItem{Collaborating with laboratory directors and faculty using Agile methodology to gather requirements, create user stories, and deliver prototypes through Dev/Test/Live workflow with Git version control}
-    \resumeItem{Building responsive design serving 19+ member institutions and 500+ researchers with improved navigation and accessibility using Acquia hosting infrastructure}
+    \resumeItem{Developing enterprise web application using Drupal, PHP, JavaScript, and MySQL on Pantheon Hosting, architecting data migration workflows for 10,000+ scientific records with superfish jQuery navigation system}
+    \resumeItem{Leading iterative development process with lab directors and faculty, gathering requirements, implementing features, and incorporating feedback through prototyping cycles using Git Dev/Test/Live deployment pipeline}
+    \resumeItem{Building responsive interface serving 19+ research institutions and 500+ researchers, optimizing user experience and performance on cloud infrastructure with continuous integration workflows}
   \resumeItemListEnd
-
-
-
+  
 \resumeSubheading
-  {Machine Learning Researcher}{Jan 2025 - May 2025}
+  {Machine Learning Researcher}{Jan 2025 - Present}
   {University of Georgia - Soybean Breeding and Genetics Laboratory}{Athens, GA}
   \resumeItemListStart
-    \resumeItem{Architected ML pipeline using Python, PyTorch, and scikit-learn, implementing two-stage pipeline architecture that processed 1,512 genomic samples across 10-year dataset (2015-2024) achieving 84\% performance improvement}
+    \resumeItem{Architected ML pipeline using Python, PyTorch, and scikit-learn with two-stage architecture that processed 1,512 genomic samples over 10-year dataset, achieving 84\% accuracy improvement over baseline GBLUP model}
     \resumeItem{Implemented dimensionality reduction techniques (like PCA and autoencoders) to transform 10,000+ features into optimal subsets}
     \resumeItem{Collaborated with postdoctoral researchers and faculty to build cross-platform ML system integrating Python and R, implementing GPU-accelerated workflows that reduced analysis time by 60\%}
   \resumeItemListEnd
-      
+
     \resumeSubheading
-      {Cybersecurity Intern}{Feb 2023 - May 2023}
-      {Corizo}{Remote}
+      {Computer Vision Researcher}{Jan 2025 - May2025}
+      {University of Georgia - Wallace Lab}{Athens, GA}
       \resumeItemListStart
-        \resumeItem{Identified and resolved 50+ software vulnerabilities using BurpSuite, Nmap and manual code review}
-        \resumeItem{Developed Python automation scripts for security patch deployment, reducing manual effort by 40\%}
+        \resumeItem{Developing computer vision system for automated brace root health assessment, implementing 7+ deep learning architectures (UNet3+, ResNet50-UNet, Attention UNet) in TensorFlow to achieve 71\% segmentation accuracy}
+        \resumeItem{Engineered ML pipeline using Python and OpenCV to automate root counting and image analysis, designing custom loss functions and data augmentation techniques that reduced manual measurement time by 90\% for brace root images}
+        \resumeItem{Built semantic segmentation models with 50M+ parameters using TensorFlow Keras, optimizing GPU performance and implementing custom data generators to advance ongoing research}
       \resumeItemListEnd
+
+
+      
   \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
 
-    \resumeProjectHeading
-          {Sky Hop} {React, Java, Spring Boot, MySQL, JWT}{Mar 2025}
-          {https://github.com/venu284/Flight-Booking.git}
-          \resumeItemListStart
-          \resumeItem{Built full-stack airline booking system using Java, Spring Boot, and React, implementing JWT authentication and preventing 7 SQL injection attack types}
-          \resumeItem{Designed normalized MySQL database with 6 tables and 7 foreign keys using 3NF methodology, eliminating data redundancy across flight booking operations}
-          \resumeItem{Collaborated with 5-member team to develop RESTful APIs and secure payment processing, achieving 99\% uptime during system demonstrations}
-         \resumeItemListEnd
+   
 
-    
-      \resumeProjectHeading
-          {Cinema Booking System}{Next.js, React, Node.js, MongoDB, Tailwind CSS}{Feb 2025}
-          {https://github.com/venu284/e-cinema-booking.git}
-          \resumeItemListStart
-            \resumeItem{Built scalable cinema booking platform using Next.js and Node.js, reducing checkout abandonment by 35\% through multi-threaded transaction processing}
-            \resumeItem{Developed 9+ Mongoose data models with atomic reservation logic, eliminating 90\% of seat overbooking conflicts and supporting dynamic pricing}
-            \resumeItem{Optimized performance with SSR/SSG strategies achieving 25\% faster page loads and 40\% code reduction through centralized API architecture}
-          \resumeItemListEnd
-          
-      \resumeProjectHeading
+    \resumeProjectHeading
           {Student Identification Management}{Python, Flask, OpenCV}{Jan 2025}{https://github.com/venu284/Student-Identification-Management.git}
           \resumeItemListStart
-            \resumeItem{Built and deployed facial recognition attendance system using Python, Flask, and OpenCV achieving 95\% accuracy for professor's classes serving 180+ students}
-            \resumeItem{Developed RESTful API microservices with real-time video processing and SQLite optimization, reducing query loads by 90\% with zero camera lock failures}
+            \resumeItem{Built and deployed facial recognition attendance system using Python, Flask, and OpenCV achieving 95\% accuracy for professor's classes serving 180+ students across multiple semesters}
+            \resumeItem{Developed RESTful API architecture with real-time video processing and optimized SQLite queries, reducing database load by 90\% while ensuring zero camera resource conflicts}
           \resumeItemListEnd
 
-          
-           
+    \resumeProjectHeading
+         {Cinema Booking System}{Next.js, React, Node.js, MongoDB, Tailwind CSS}{Feb 2025}
+         {https://github.com/venu284/e-cinema-booking.git}
+         \resumeItemListStart
+            \resumeItem{Developed full-stack cinema booking platform using Next.js, React, and Node.js with 9+ Mongoose MongoDB schemas, implementing real-time seat reservations and atomic transactions to eliminate double-booking conflicts}
+            \resumeItem{Optimized application performance through SSR/SSG strategies, centralized API architecture, and database-level locking mechanisms, improving page load speeds and code maintainability}
+        \resumeItemListEnd
+              
     \resumeSubHeadingListEnd
 
 
@@ -190,10 +181,21 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \item{
-     \textbf{Programming Languages:} Java, Python, C++, JavaScript, TypeScript, SQL, HTML, CSS \\
-     \textbf{Packages and Tools:} Spring Boot, React, Next.js, Node.js, Express, Flask, Git, Docker, Kubernetes, REST APIs, CI/CD, MySQL, PostgreSQL, MongoDB  \\
+      \textbf{Programming Languages:} Java, Python, C++, JavaScript, SQL, HTML, CSS \\
+      \textbf{Packages and Tools:} PyTorch, TensorFlow, scikit-learn, Keras, OpenCV, Pandas, NumPy, Matplotlib, React, Spring Boot, Node.js, Flask, Git, Linux, Docker, REST APIs, CI/CD, MySQL, PostgreSQL, MongoDB \\
      }
  \end{itemize}
 
+%-----------Publications-----------
+ \section{Publications}
+\resumeSubHeadingListStart
+  \resumePublicationsHeading
+     {Dimensionality Reduction Improves Genomic Prediction - \textit{In Preparation}}{May 2025}
+\resumePublicationsHeading
+   {\href{https://ieeexplore.ieee.org/document/10369555}{Enhancing Image Deblurring Algorithm Selection and Performance Evaluation for CCTV}}{Jan 2024}
+\resumeSubHeadingListEnd
+
 
 \end{document}
+
+
